[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Art/UI/Button01-pressed.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/Envirement/Collectable/xylaphone.png" type="Texture" id=2]
[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/CaveBG.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Art/UI/SliderHandleActive.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/UI/SliderHandle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/UI/Button03-Pressedl.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/UI/CheckBox-Notpressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/UI/Button02-Pressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/POSTPROCESSING/Menu.tres" type="Environment" id=12]
[ext_resource path="res://Assets/Art/Envirement/Collectable/RedHood.png" type="Texture" id=14]
[ext_resource path="res://Assets/Art/Envirement/Collectable/Scripture.png" type="Texture" id=15]
[ext_resource path="res://Assets/Art/Envirement/Collectable/SnakePot.png" type="Texture" id=16]
[ext_resource path="res://Assets/Art/Envirement/Collectable/sunset.png" type="Texture" id=17]
[ext_resource path="res://Assets/Art/Envirement/Collectable/Flower.png" type="Texture" id=18]
[ext_resource path="res://Assets/Art/Envirement/Collectable/Jenee.png" type="Texture" id=19]
[ext_resource path="res://Assets/Art/Envirement/Collectable/WeepingWomen2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Art/UI/Panel2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Art/UI/Button03-Hover.png" type="Texture" id=22]
[ext_resource path="res://Assets/Art/UI/Button03-Normal.png" type="Texture" id=23]
[ext_resource path="res://Assets/Art/UI/CheckBox.png" type="Texture" id=24]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SlideL"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 515, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "SlideR"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 515, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "SlideToCollectables"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -512, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "SlideToMenuFromCollectables"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -512, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="Animation" id=13]
resource_name = "Idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -70, -31 ), Vector2( -70, -37 ), Vector2( -70, -31 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -70, -31 ) ]
}

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 128, 64 )
modulate_color = Color( 0.72549, 0.72549, 0.72549, 0.705882 )

[node name="MainMenu" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_editor_description_": ""
}

[node name="CaveBg4" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.662745, 0.662745, 0.662745, 1 )
position = Vector2( -72.1191, -19 )
scale = Vector2( 1.54412, 2.1423 )

[node name="CaveBg6" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.662745, 0.662745, 0.662745, 1 )
position = Vector2( -1059, -19 )
scale = Vector2( 1.54412, 2.1423 )

[node name="CaveBg5" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.662745, 0.662745, 0.662745, 1 )
position = Vector2( 988.12, -19 )
scale = Vector2( 1.76913, 2.1423 )
flip_v = true

[node name="MenuCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuCamera"]
anims/RESET = SubResource( 1 )
anims/SlideL = SubResource( 3 )
anims/SlideR = SubResource( 2 )
anims/SlideToCollectables = SubResource( 11 )
anims/SlideToMenuFromCollectables = SubResource( 12 )

[node name="BG3" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.239216 )
margin_left = -256.0
margin_top = -153.0
margin_right = -128.0
margin_bottom = -96.0
rect_scale = Vector2( 4.03774, 5.35693 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.615686 )
margin_left = -256.0
margin_top = -150.0
margin_right = -129.0
margin_bottom = -94.0
rect_scale = Vector2( 4.03774, 5.35693 )
custom_styles/panel = SubResource( 4 )

[node name="Play" type="TextureButton" parent="."]
modulate = Color( 0.917647, 0.890196, 0.737255, 1 )
margin_left = -70.0
margin_top = -31.0
margin_bottom = -10.0
rect_scale = Vector2( 2.08828, 2.25162 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 22 )
texture_disabled = ExtResource( 1 )
expand = true
stretch_mode = 3

[node name="RichTextLabel" type="Label" parent="Play"]
anchor_left = 0.11
anchor_top = 0.34
anchor_right = 0.908
anchor_bottom = 0.604
margin_left = -4.7
margin_top = -7.14
margin_right = 148.44
margin_bottom = 37.316
rect_scale = Vector2( 0.304106, 0.318319 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Begin Your Journey"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Play"]
autoplay = "Idle"
anims/Idle = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="Settings" type="TextureButton" parent="."]
modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
margin_left = -39.0
margin_top = 51.0
margin_right = 28.0
margin_bottom = 76.0
rect_scale = Vector2( 1.18565, 1.16876 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 22 )
texture_disabled = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="RichTextLabel" type="Label" parent="Settings"]
anchor_left = 0.321
anchor_top = 0.366
anchor_right = 1.041
anchor_bottom = 0.884
margin_left = -3.79522
margin_top = -4.87198
margin_right = 27.3248
margin_bottom = 33.9121
rect_scale = Vector2( 0.441778, 0.47711 )
theme = ExtResource( 3 )
text = "Settings
"
align = 1
valign = 1

[node name="Collectables" type="TextureButton" parent="."]
modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
margin_left = -43.0
margin_top = 19.0
margin_right = 29.0
margin_bottom = 44.0
rect_scale = Vector2( 1.20591, 1.28406 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 22 )
texture_disabled = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="RichTextLabel" type="Label" parent="Collectables"]
anchor_left = 0.321
anchor_top = 0.366
anchor_right = 1.041
anchor_bottom = 0.884
margin_left = -23.9413
margin_top = -4.43052
margin_right = 89.2187
margin_bottom = 26.5835
rect_scale = Vector2( 0.459197, 0.479118 )
theme = ExtResource( 3 )
text = "Collectables
"
align = 1
valign = 1

[node name="Exit" type="TextureButton" parent="."]
modulate = Color( 0.74902, 0.643137, 0.643137, 1 )
margin_left = -32.0
margin_top = 112.0
margin_right = 49.0
margin_bottom = 147.0
rect_scale = Vector2( 0.799492, 0.927595 )
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 22 )
texture_disabled = ExtResource( 10 )
expand = true

[node name="RichTextLabel" type="Label" parent="Exit"]
anchor_left = 0.385
anchor_top = 0.283
anchor_right = 0.602
anchor_bottom = 0.633
margin_left = -1.16593
margin_top = -0.2025
margin_right = 15.2571
margin_bottom = 32.5475
rect_scale = Vector2( 0.56243, 0.5437 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Exit
"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = -256.0
margin_top = -128.0
margin_right = -61.0
margin_bottom = -101.0
rect_scale = Vector2( 2.62435, 2.97056 )
theme = ExtResource( 3 )
text = "REDS TALE"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
modulate = Color( 0.427451, 0.603922, 0.976471, 1 )
margin_left = -58.0
margin_top = -66.0
margin_right = 224.0
margin_bottom = -39.0
rect_scale = Vector2( 0.414524, 0.5081 )
theme = ExtResource( 3 )
text = "By: Finn McGuire & Dirk J. Neefs"
align = 1
valign = 1
autowrap = true

[node name="bestTimeLabel" type="Label" parent="."]
margin_left = -263.0
margin_top = 80.0
margin_right = 477.0
margin_bottom = 107.0
rect_scale = Vector2( 0.715327, 0.996831 )
theme = ExtResource( 3 )
text = "Best Time:"
align = 1
valign = 1

[node name="SettingsMenu" type="Control" parent="."]
margin_left = 257.0
margin_top = -153.0
margin_right = 773.0
margin_bottom = 142.0

[node name="BG2" type="Panel" parent="SettingsMenu"]
modulate = Color( 0, 0, 0, 0.52549 )
margin_left = -1.0
margin_right = 127.0
margin_bottom = 57.0
rect_scale = Vector2( 4.03774, 5.35693 )

[node name="Panel" type="Panel" parent="SettingsMenu"]
margin_top = 3.0
margin_right = 516.0
margin_bottom = 305.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="SettingsMenu"]
margin_left = 204.0
margin_top = 19.0
margin_right = 278.0
margin_bottom = 40.0
rect_scale = Vector2( 1.52507, 1.45274 )
theme = ExtResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="Exit_Settings" type="TextureButton" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 245.0
margin_right = -427.0
rect_scale = Vector2( 1.12922, 0.636988 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 22 )
texture_disabled = ExtResource( 10 )
expand = true

[node name="RichTextLabel" type="Label" parent="SettingsMenu/Exit_Settings"]
anchor_left = 0.385
anchor_top = 0.283
anchor_right = 0.602
anchor_bottom = 0.633
margin_left = -3.19426
margin_top = -1.59087
margin_right = 23.5217
margin_bottom = 1.90912
rect_scale = Vector2( 0.467908, 0.726608 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Back"
align = 1
valign = 1

[node name="FullScreen\?" type="TextureButton" parent="SettingsMenu"]
margin_left = 204.0
margin_top = 60.0
margin_right = 244.0
margin_bottom = 103.0
rect_scale = Vector2( 0.520133, 0.439892 )
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 24 )
expand = true

[node name="Label2" type="Label" parent="SettingsMenu/FullScreen\?"]
margin_left = 58.0
margin_right = 199.0
margin_bottom = 25.0
rect_scale = Vector2( 1.26828, 1.54338 )
theme = ExtResource( 3 )
text = "Fullscreen"
align = 1
valign = 1

[node name="SpeedRunTimer\?" type="TextureButton" parent="SettingsMenu"]
margin_left = 204.0
margin_top = 91.0
margin_right = 244.0
margin_bottom = 136.0
rect_scale = Vector2( 0.520133, 0.439892 )
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 24 )
expand = true

[node name="Label2" type="Label" parent="SettingsMenu/SpeedRunTimer\?"]
margin_left = 57.6776
margin_top = 6.81984
margin_right = 196.678
margin_bottom = 27.8198
rect_scale = Vector2( 1.26828, 1.54338 )
theme = ExtResource( 3 )
text = "Speed Run Timer"
align = 1
valign = 1

[node name="Warning" type="Label" parent="SettingsMenu/SpeedRunTimer\?"]
modulate = Color( 0.976471, 1, 0, 0.670588 )
margin_left = 58.0
margin_top = 41.0
margin_right = 304.0
margin_bottom = 62.0
rect_scale = Vector2( 0.718552, 0.75824 )
theme = ExtResource( 3 )
text = "Must Clear Save First"
align = 1
valign = 1
uppercase = true

[node name="MasterVolume" type="Label" parent="SettingsMenu"]
margin_left = 216.0
margin_top = 129.0
margin_right = 342.0
margin_bottom = 150.0
rect_scale = Vector2( 0.719712, 0.764272 )
theme = ExtResource( 3 )
text = "Master Volume"
align = 1
valign = 1

[node name="VolumeSlider" type="HSlider" parent="SettingsMenu/MasterVolume"]
margin_left = -16.6734
margin_top = 18.3181
margin_right = 145.326
margin_bottom = 50.3181
theme = ExtResource( 3 )
custom_icons/tick = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 7 )
min_value = -30.0
max_value = 0.0

[node name="MusicVolume" type="Label" parent="SettingsMenu"]
margin_left = 216.0
margin_top = 170.0
margin_right = 342.0
margin_bottom = 191.0
rect_scale = Vector2( 0.719712, 0.764272 )
theme = ExtResource( 3 )
text = "Music Volume"
align = 1
valign = 1

[node name="MusicVolSlider" type="HSlider" parent="SettingsMenu/MusicVolume"]
margin_left = -16.6734
margin_top = 18.3181
margin_right = 145.326
margin_bottom = 50.3181
theme = ExtResource( 3 )
min_value = -30.0
max_value = 0.0

[node name="GameData" type="Label" parent="SettingsMenu"]
margin_left = 198.0
margin_top = 227.0
margin_right = 371.0
margin_bottom = 257.0
rect_scale = Vector2( 0.685657, 0.793143 )
theme = ExtResource( 3 )
text = "Game Data"
align = 1
valign = 1
uppercase = true

[node name="ClearSave" type="TextureButton" parent="SettingsMenu/GameData"]
modulate = Color( 0.654902, 0.258824, 0.258824, 1 )
margin_left = 45.2121
margin_top = 32.781
margin_right = 105.212
margin_bottom = 46.781
rect_scale = Vector2( 1.41258, 1.03415 )
hint_tooltip = "Delete Save"
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 22 )
texture_disabled = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="RichTextLabel" type="Label" parent="SettingsMenu/GameData/ClearSave"]
anchor_left = 0.11
anchor_top = 0.34
anchor_right = 0.908
anchor_bottom = 0.604
margin_left = -2.47012
margin_top = -7.19834
margin_right = 99.6499
margin_bottom = 16.1617
rect_scale = Vector2( 0.353123, 0.481594 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Clear Game Data"
align = 1
valign = 1

[node name="CollectablesMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )

[node name="BG" type="Panel" parent="CollectablesMenu"]
modulate = Color( 0, 0, 0, 0.52549 )
margin_left = -769.0
margin_top = -153.0
margin_right = -641.0
margin_bottom = -96.0
rect_scale = Vector2( 4.03774, 5.35693 )

[node name="BGPanel" type="Panel" parent="CollectablesMenu"]
modulate = Color( 1, 1, 1, 0.615686 )
margin_left = -769.0
margin_top = -150.0
margin_right = -642.0
margin_bottom = -94.0
rect_scale = Vector2( 4.03774, 5.35693 )
custom_styles/panel = SubResource( 4 )

[node name="WeepingWomen" type="Sprite" parent="CollectablesMenu"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -689, -74 )
scale = Vector2( 1.40625, 1.34375 )
texture = ExtResource( 20 )

[node name="Collected" type="Sprite" parent="CollectablesMenu/WeepingWomen"]
visible = false
texture = ExtResource( 20 )

[node name="Snake" type="Sprite" parent="CollectablesMenu"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -580, -76 )
scale = Vector2( 1.40625, 1.40625 )
texture = ExtResource( 16 )

[node name="Collected" type="Sprite" parent="CollectablesMenu/Snake"]
visible = false
texture = ExtResource( 16 )

[node name="Scripture" type="Sprite" parent="CollectablesMenu"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -464, -74 )
scale = Vector2( 1.40625, 1.34375 )
texture = ExtResource( 15 )

[node name="Collected" type="Sprite" parent="CollectablesMenu/Scripture"]
visible = false
texture = ExtResource( 15 )

[node name="Hood" type="Sprite" parent="CollectablesMenu"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -344, -74 )
scale = Vector2( 1.40625, 1.34375 )
texture = ExtResource( 14 )

[node name="Collected" type="Sprite" parent="CollectablesMenu/Hood"]
visible = false
texture = ExtResource( 14 )

[node name="Sunset" type="Sprite" parent="CollectablesMenu"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -689, 43 )
scale = Vector2( 1.40625, 1.34375 )
texture = ExtResource( 17 )

[node name="Collected" type="Sprite" parent="CollectablesMenu/Sunset"]
visible = false
texture = ExtResource( 17 )

[node name="Flower" type="Sprite" parent="CollectablesMenu"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -580, 43 )
scale = Vector2( 1.40625, 1.34375 )
texture = ExtResource( 18 )

[node name="Collected" type="Sprite" parent="CollectablesMenu/Flower"]
visible = false
texture = ExtResource( 18 )

[node name="Jenee" type="Sprite" parent="CollectablesMenu"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -464, 43 )
scale = Vector2( 1.40625, 1.34375 )
texture = ExtResource( 19 )

[node name="Collected" type="Sprite" parent="CollectablesMenu/Jenee"]
visible = false
texture = ExtResource( 19 )

[node name="Xylaphone" type="Sprite" parent="CollectablesMenu"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( -344, 43 )
scale = Vector2( 1.40625, 1.34375 )
texture = ExtResource( 2 )

[node name="Collected" type="Sprite" parent="CollectablesMenu/Xylaphone"]
visible = false
texture = ExtResource( 2 )

[node name="BackToMenu" type="TextureButton" parent="CollectablesMenu"]
modulate = Color( 0.929412, 0.929412, 0.929412, 1 )
margin_left = -326.0
margin_top = 118.0
margin_right = -272.0
margin_bottom = 130.0
rect_scale = Vector2( 0.722233, 0.842515 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 22 )
texture_disabled = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="RichTextLabel" type="Label" parent="CollectablesMenu/BackToMenu"]
anchor_left = 0.321
anchor_top = 0.366
anchor_right = 1.041
anchor_bottom = 0.884
margin_left = -29.7953
margin_top = -6.76584
margin_right = 73.3247
margin_bottom = 32.0182
rect_scale = Vector2( 0.557956, 0.521319 )
theme = ExtResource( 3 )
text = "Back
"
align = 1
valign = 1

[node name="MainMenuEnv" type="WorldEnvironment" parent="."]
environment = ExtResource( 12 )

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Collectables" to="." method="_on_Collectables_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="SettingsMenu/Exit_Settings" to="." method="_on_Exit_Settings_pressed"]
[connection signal="toggled" from="SettingsMenu/FullScreen?" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="SettingsMenu/SpeedRunTimer?" to="." method="_on_SpeedRunTimer_toggled"]
[connection signal="value_changed" from="SettingsMenu/MasterVolume/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/MusicVolume/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="pressed" from="SettingsMenu/GameData/ClearSave" to="." method="_on_ClearSave_pressed"]
[connection signal="pressed" from="CollectablesMenu/BackToMenu" to="." method="_on_BackToMenu_pressed"]
